--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,46 @@
 #content {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width:100%;
 }
 
 #greeting-container {
   margin-top: 20px;
+}
+
+.title-jumbotron{
+    display: flex;
+    justify-content: center;
+    margin: 0px auto;
+    
+
+}
+
+.jumbotron{
+    background-color: #4b9299;
+    color: white;
+}
+
+.contactinfo{
+    margin: 0 auto;
+    width: 60%;
+}
+
+
+.iconscontact{
+    width: 100%;
+}
+
+.jumbotron hr{
+    border: 0.1px solid white;
+    width: 80%;
+}
+
+.introduction{
+    width: 70%;    
+}
+
+
+.skills{
+    flex-wrap: wrap;
 }
